--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,6 @@
     <h1>My Personal Home Page</h1>
     <p>You can read more about me or check out my blog!</p>
     <%= link_to 'About me', pages_about_path %>
+    <br>
+    <%= link_to 'Blog', posts_path %>
 </div>
